prometheus-grafana/deploy/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: "grafana.stack.ku"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: stable-prometheus-stack-grafana
                port:
                  number: 80
